--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,15 @@ cmake_minimum_required (VERSION 3.0)
 PROJECT(Pedestrian_Tracking_Application)
 
 # Find the QtCore and QtWidgets libraries
+find_package(Qt5Core REQUIRED)
 find_package(Qt5Widgets REQUIRED)
+find_package(Qt5PrintSupport REQUIRED)
+
 
 # include the dlib library
+include_directories(C:/Builds/Official/dlib-19.2)
+link_directories(C:/Builds/Official/dlib-19.2/Build/dlib/Release)
+link_directories(C:/Builds/Official/dlib-19.2/Build/dlib/Debug)
 
 
 # include the openCV library
@@ -32,16 +38,6 @@ QT5_WRAP_UI( Pedestrian_Tracking_Application_FORMS_HEADERS ${Pedestrian_Tracking
 # Add Qt Definitions
 ADD_DEFINITIONS( ${QT_DEFINITIONS} )
 
-# Static Flag Overrides
-#set(CMAKE_C_FLAGS_DEBUG "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1")
-#set(CMAKE_C_FLAGS_MINSIZEREL    "/MT /O1 /Ob1 /D NDEBUG")
-#set(CMAKE_C_FLAGS_RELEASE        "/MT /O2 /Ob2 /D NDEBUG")
-#set(CMAKE_C_FLAGS_RELWITHDEBINFO "/MT /Zi /O2 /Ob1 /D NDEBUG")
-
-#set(CMAKE_CXX_FLAGS_DEBUG "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1")
-#set(CMAKE_CXX_FLAGS_MINSIZEREL    "/MT /O1 /Ob1 /D NDEBUG")
-#set(CMAKE_CXX_FLAGS_RELEASE       "/MT /O2 /Ob2 /D NDEBUG")
-#set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/MT /Zi /O2 /Ob1 /D NDEBUG")
 
 # Set MSVC Filters
 source_group ("Headers" FILES ${HEADERS})
@@ -55,5 +51,4 @@ ADD_EXECUTABLE(Pedestrian_Tracking_Application ${SOURCES} ${HEADERS_MOC} ${Pedes
 
 
 # Target link libraries
-#target_link_libraries (Pedestrian_Tracking_Application Qt5::Widgets dlib ${OpenCV_LIBS})
-target_link_libraries (Pedestrian_Tracking_Application Qt5::Widgets ${OpenCV_LIBS})
+target_link_libraries (Pedestrian_Tracking_Application Qt5::Core Qt5::Widgets Qt5::PrintSupport dlib ${OpenCV_LIBS})
